--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "Simple NPM package for creating github releases",
   "main": "index.js",
+  "bin": {
+    "gb-node-release": "bin/index.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -31,6 +34,9 @@
     "file-exists": "^2.0.0",
     "github": "^2.4.0",
     "lodash": "^4.14.1",
+    "semver": "^5.3.0",
+    "simple-git": "^1.44.0",
+    "stdio": "^0.2.7",
     "yamljs": "^0.2.8"
   }
 }
