--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simple NPM package for creating github releases",
   "main": "index.js",
   "bin": {
-    "gb-node-release": "bin/index.js"
+    "release": "bin/index.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
