--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "file-exists": "^2.0.0",
     "github": "^2.4.0",
     "lodash": "^4.14.1",
+    "npm": "^3.10.5",
     "semver": "^5.3.0",
     "simple-git": "^1.44.0",
     "stdio": "^0.2.7",
